Revision history for Perl extension HTML::TagSet
                                        Time-stamp: "2000-10-20 19:33:53 MDT"

2000-10-20  Sean M. Burke  sburke@cpan.org

	* Release 3.03
	Added 'tr' => ['background'] at the suggestion of Renzo Toma
	(renzo.toma@veronica.nl), who notes: "Netscape Communicator 4.73
	(probably even earlier) supports it, Internet Explorer 5.5 does
	not (yet)."
	
2000-09-04  Sean M. Burke  sburke@cpan.org

	* Release 3.02
	Added %is_Possible_Strict_P_Content.

2000-08-21  Sean M. Burke  sburke@cpan.org

	* Release 3.01 -- first release.
	Data tables copied from previous version of HTML::Element
	and HTML::TreeBuilder, with some additions.
